fixes bug 116798 "Opening IMAP mail hangs Mail program (and Mozilla)" patch=adu@sparc.spb.su r/sr=bienvenu,darin