netwerk/streamconv/converters/mozTXTToHTMLConv.cpp
@@ -203,7 +203,7 @@ mozTXTToHTMLConv::FindURLStart(const PRUnichar * aInString, PRInt32 aInLength,
                            temp[PRUint32(i)] == '"'))
     {
       start = PRUint32(++i);
-      return PR_TRUE;
+      return start < pos;
     }
     else
       return PR_FALSE;
@@ -219,7 +219,7 @@ mozTXTToHTMLConv::FindURLStart(const PRUnichar * aInString, PRInt32 aInLength,
          aInString[PRUint32(i)] == '.'
          ); i--)
       ;
-    if (++i >= 0 && nsCRT::IsAsciiAlpha(aInString[PRUint32(i)]))
+    if (++i >= 0 && i < pos && nsCRT::IsAsciiAlpha(aInString[PRUint32(i)]))
     {
       start = PRUint32(i);
       return PR_TRUE;
@@ -242,7 +242,7 @@ mozTXTToHTMLConv::FindURLStart(const PRUnichar * aInString, PRInt32 aInLength,
       ;
     if
       (
-        ++i >= 0
+        ++i >= 0 && i < pos
           &&
           (
             nsCRT::IsAsciiAlpha(aInString[PRUint32(i)]) ||
@@ -277,7 +277,7 @@ mozTXTToHTMLConv::FindURLEnd(const PRUnichar * aInString, PRInt32 aInStringLengt
         (check == RFC1738 || temp[start - 1] == '<' ? '>' : '"'))
     {
       end = PRUint32(i);
-      return PR_TRUE;
+      return end > pos;
     }
     else
       return PR_FALSE;
